@startuml

namespace Pronamic_Pay {
	interface PaymentDataInterface
	abstract class AbstractPaymentData

	PaymentDataInterface <|-- AbstractPaymentData
}

namespace Pronamic_Pay_WP {
	class PaymentData {
		.. Source ..
		get_source()
		get_source_id()
	
		.. General ..
		get_order_id()
	
		.. Currency ..
		get_currency_alphabetic_code()
		
		.. Customer ..
		get_email()
		getCustomerName()
		getOwnerAddress()
		getOwnerCity()
		getOwnerZip()
		
		.. URL's ..
		get_normal_return_url()
		get_cancel_url()
		get_success_url()
		get_error_url()
	}
	
	Pronamic_Pay.AbstractPaymentData <|-- PaymentData 
	
	Pronamic_Pay_WP.PaymentData <|-- AppThemes
	Pronamic_Pay_WP.PaymentData <|-- ClassiPress
	Pronamic_Pay_WP.PaymentData <|-- EasyDigitalDownloads
	Pronamic_Pay_WP.PaymentData <|-- EShop
	Pronamic_Pay_WP.PaymentData <|-- EventEspresso
	Pronamic_Pay_WP.PaymentData <|-- GravityForms
	Pronamic_Pay_WP.PaymentData <|-- IThemesExchange
	Pronamic_Pay_WP.PaymentData <|-- Jigoshop
	Pronamic_Pay_WP.PaymentData <|-- JobRoller
	Pronamic_Pay_WP.PaymentData <|-- Membership
	Pronamic_Pay_WP.PaymentData <|-- S2Member
	Pronamic_Pay_WP.PaymentData <|-- Shopp
	Pronamic_Pay_WP.PaymentData <|-- WooCommerce
	Pronamic_Pay_WP.PaymentData <|-- WPeCommerce
}

@enduml
